# Closest-Pair---Cross-Rank-Neighbor-Search

./: .gitignore  CMakeLists.txt  CP.cpp  README.md  results.csv  run.ps1
data/: summary_median_by_points_threads.csv
utils/: plot_results.py  requirements.txt
